--- a/frontend/src/signup.html
+++ b/frontend/src/signup.html
@@ -25,9 +25,7 @@
       <!-- ===== Sidebar End ===== -->
 
       <!-- ===== Content Area Start ===== -->
-      <div
-        class="relative flex flex-1 flex-col overflow-y-auto overflow-x-hidden"
-      >
+      <div class="relative flex flex-1 flex-col overflow-y-auto overflow-x-hidden">
         <!-- ===== Header Start ===== -->
         <include src="./partials/header.html" />
         <!-- ===== Header End ===== -->
@@ -36,12 +34,8 @@
         <main>
           <div class="mx-auto max-w-screen-2xl p-4 md:p-6 2xl:p-10">
             <!-- Breadcrumb Start -->
-            <div
-              class="mb-6 flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
-            >
-              <h2 class="text-title-md2 font-bold text-black dark:text-white">
-                Sign Up
-              </h2>
+            <div class="mb-6 flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between">
+              <h2 class="text-title-md2 font-bold text-black dark:text-white">Sign Up</h2>
 
               <nav>
                 <ol class="flex items-center gap-2">
@@ -55,55 +49,30 @@
             <!-- Breadcrumb End -->
 
             <!-- ====== Forms Section Start -->
-            <div
-              class="rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-boxdark"
-            >
+            <div class="rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-boxdark">
               <div class="flex flex-wrap items-center">
                 <div class="hidden w-full xl:block xl:w-1/2">
                   <div class="px-26 py-17.5 text-center">
                     <a class="mb-5.5 inline-block" href="index.html">
-                      <img
-                        class="hidden dark:block"
-                        src="./images/logo/logo.svg"
-                        alt="Logo"
-                      />
-                      <img
-                        class="dark:hidden"
-                        src="./images/logo/logo-dark.svg"
-                        alt="Logo"
-                      />
+                      <img class="hidden dark:block" src="./images/logo/logo.svg" alt="Logo" />
+                      <img class="dark:hidden" src="./images/logo/logo-dark.svg" alt="Logo" />
                     </a>
 
-                    <p class="font-medium 2xl:px-20">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                      suspendisse.
-                    </p>
+                    <p class="font-medium 2xl:px-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit suspendisse.</p>
 
                     <span class="mt-15 inline-block">
-                      <img
-                        src="./images/illustration/illustration-03.svg"
-                        alt="illustration"
-                      />
+                      <img src="./images/illustration/illustration-03.svg" alt="illustration" />
                     </span>
                   </div>
                 </div>
-                <div
-                  class="w-full border-stroke dark:border-strokedark xl:w-1/2 xl:border-l-2"
-                >
+                <div class="w-full border-stroke dark:border-strokedark xl:w-1/2 xl:border-l-2">
                   <div class="w-full p-4 sm:p-12.5 xl:p-17.5">
                     <span class="mb-1.5 block font-medium">Start for free</span>
-                    <h2
-                      class="mb-9 text-2xl font-bold text-black dark:text-white sm:text-title-xl2"
-                    >
-                      Sign Up to TailAdmin
-                    </h2>
+                    <h2 class="mb-9 text-2xl font-bold text-black dark:text-white sm:text-title-xl2">Sign Up to TailAdmin</h2>
 
                     <form>
                       <div class="mb-4">
-                        <label
-                          class="mb-2.5 block font-medium text-black dark:text-white"
-                          >Name</label
-                        >
+                        <label class="mb-2.5 block font-medium text-black dark:text-white">Name</label>
                         <div class="relative">
                           <input
                             type="text"
@@ -112,14 +81,7 @@
                           />
 
                           <span class="absolute right-4 top-4">
-                            <svg
-                              class="fill-current"
-                              width="22"
-                              height="22"
-                              viewBox="0 0 22 22"
-                              fill="none"
-                              xmlns="http://www.w3.org/2000/svg"
-                            >
+                            <svg class="fill-current" width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <g opacity="0.5">
                                 <path
                                   d="M11.0008 9.52185C13.5445 9.52185 15.607 7.5281 15.607 5.0531C15.607 2.5781 13.5445 0.584351 11.0008 0.584351C8.45703 0.584351 6.39453 2.5781 6.39453 5.0531C6.39453 7.5281 8.45703 9.52185 11.0008 9.52185ZM11.0008 2.1656C12.6852 2.1656 14.0602 3.47185 14.0602 5.08748C14.0602 6.7031 12.6852 8.00935 11.0008 8.00935C9.31641 8.00935 7.94141 6.7031 7.94141 5.08748C7.94141 3.47185 9.31641 2.1656 11.0008 2.1656Z"
@@ -136,10 +98,7 @@
                       </div>
 
                       <div class="mb-4">
-                        <label
-                          class="mb-2.5 block font-medium text-black dark:text-white"
-                          >Email</label
-                        >
+                        <label class="mb-2.5 block font-medium text-black dark:text-white">Email</label>
                         <div class="relative">
                           <input
                             type="email"
@@ -148,14 +107,7 @@
                           />
 
                           <span class="absolute right-4 top-4">
-                            <svg
-                              class="fill-current"
-                              width="22"
-                              height="22"
-                              viewBox="0 0 22 22"
-                              fill="none"
-                              xmlns="http://www.w3.org/2000/svg"
-                            >
+                            <svg class="fill-current" width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <g opacity="0.5">
                                 <path
                                   d="M19.2516 3.30005H2.75156C1.58281 3.30005 0.585938 4.26255 0.585938 5.46567V16.6032C0.585938 17.7719 1.54844 18.7688 2.75156 18.7688H19.2516C20.4203 18.7688 21.4172 17.8063 21.4172 16.6032V5.4313C21.4172 4.26255 20.4203 3.30005 19.2516 3.30005ZM19.2516 4.84692C19.2859 4.84692 19.3203 4.84692 19.3547 4.84692L11.0016 10.2094L2.64844 4.84692C2.68281 4.84692 2.71719 4.84692 2.75156 4.84692H19.2516ZM19.2516 17.1532H2.75156C2.40781 17.1532 2.13281 16.8782 2.13281 16.5344V6.35942L10.1766 11.5157C10.4172 11.6875 10.6922 11.7563 10.9672 11.7563C11.2422 11.7563 11.5172 11.6875 11.7578 11.5157L19.8016 6.35942V16.5688C19.8703 16.9125 19.5953 17.1532 19.2516 17.1532Z"
@@ -168,10 +120,7 @@
                       </div>
 
                       <div class="mb-4">
-                        <label
-                          class="mb-2.5 block font-medium text-black dark:text-white"
-                          >Password</label
-                        >
+                        <label class="mb-2.5 block font-medium text-black dark:text-white">Password</label>
                         <div class="relative">
                           <input
                             type="password"
@@ -180,14 +129,7 @@
                           />
 
                           <span class="absolute right-4 top-4">
-                            <svg
-                              class="fill-current"
-                              width="22"
-                              height="22"
-                              viewBox="0 0 22 22"
-                              fill="none"
-                              xmlns="http://www.w3.org/2000/svg"
-                            >
+                            <svg class="fill-current" width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <g opacity="0.5">
                                 <path
                                   d="M16.1547 6.80626V5.91251C16.1547 3.16251 14.0922 0.825009 11.4797 0.618759C10.0359 0.481259 8.59219 0.996884 7.52656 1.95938C6.46094 2.92188 5.84219 4.29688 5.84219 5.70626V6.80626C3.84844 7.18438 2.33594 8.93751 2.33594 11.0688V17.2906C2.33594 19.5594 4.19219 21.3813 6.42656 21.3813H15.5016C17.7703 21.3813 19.6266 19.525 19.6266 17.2563V11C19.6609 8.93751 18.1484 7.21876 16.1547 6.80626ZM8.55781 3.09376C9.31406 2.40626 10.3109 2.06251 11.3422 2.16563C13.1641 2.33751 14.6078 3.98751 14.6078 5.91251V6.70313H7.38906V5.67188C7.38906 4.70938 7.80156 3.78126 8.55781 3.09376ZM18.1141 17.2906C18.1141 18.7 16.9453 19.8688 15.5359 19.8688H6.46094C5.05156 19.8688 3.91719 18.7344 3.91719 17.325V11.0688C3.91719 9.52189 5.15469 8.28438 6.70156 8.28438H15.2953C16.8422 8.28438 18.1141 9.52188 18.1141 11V17.2906Z"
@@ -204,10 +146,7 @@
                       </div>
 
                       <div class="mb-6">
-                        <label
-                          class="mb-2.5 block font-medium text-black dark:text-white"
-                          >Re-type Password</label
-                        >
+                        <label class="mb-2.5 block font-medium text-black dark:text-white">Re-type Password</label>
                         <div class="relative">
                           <input
                             type="password"
@@ -216,14 +155,7 @@
                           />
 
                           <span class="absolute right-4 top-4">
-                            <svg
-                              class="fill-current"
-                              width="22"
-                              height="22"
-                              viewBox="0 0 22 22"
-                              fill="none"
-                              xmlns="http://www.w3.org/2000/svg"
-                            >
+                            <svg class="fill-current" width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <g opacity="0.5">
                                 <path
                                   d="M16.1547 6.80626V5.91251C16.1547 3.16251 14.0922 0.825009 11.4797 0.618759C10.0359 0.481259 8.59219 0.996884 7.52656 1.95938C6.46094 2.92188 5.84219 4.29688 5.84219 5.70626V6.80626C3.84844 7.18438 2.33594 8.93751 2.33594 11.0688V17.2906C2.33594 19.5594 4.19219 21.3813 6.42656 21.3813H15.5016C17.7703 21.3813 19.6266 19.525 19.6266 17.2563V11C19.6609 8.93751 18.1484 7.21876 16.1547 6.80626ZM8.55781 3.09376C9.31406 2.40626 10.3109 2.06251 11.3422 2.16563C13.1641 2.33751 14.6078 3.98751 14.6078 5.91251V6.70313H7.38906V5.67188C7.38906 4.70938 7.80156 3.78126 8.55781 3.09376ZM18.1141 17.2906C18.1141 18.7 16.9453 19.8688 15.5359 19.8688H6.46094C5.05156 19.8688 3.91719 18.7344 3.91719 17.325V11.0688C3.91719 9.52189 5.15469 8.28438 6.70156 8.28438H15.2953C16.8422 8.28438 18.1141 9.52188 18.1141 11V17.2906Z"
@@ -240,24 +172,12 @@
                       </div>
 
                       <div class="mb-5">
-                        <input
-                          type="submit"
-                          value="Create account"
-                          class="w-full cursor-pointer rounded-lg border border-primary bg-primary p-4 font-medium text-white transition hover:bg-opacity-90"
-                        />
+                        <input type="submit" value="Create account" class="w-full cursor-pointer rounded-lg border border-primary bg-primary p-4 font-medium text-white transition hover:bg-opacity-90" />
                       </div>
 
-                      <button
-                        class="flex w-full items-center justify-center gap-3.5 rounded-lg border border-stroke bg-gray p-4 font-medium hover:bg-opacity-80 dark:border-strokedark dark:bg-meta-4 dark:hover:bg-opacity-80"
-                      >
+                      <button class="flex w-full items-center justify-center gap-3.5 rounded-lg border border-stroke bg-gray p-4 font-medium hover:bg-opacity-80 dark:border-strokedark dark:bg-meta-4 dark:hover:bg-opacity-80">
                         <span>
-                          <svg
-                            width="20"
-                            height="20"
-                            viewBox="0 0 20 20"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg"
-                          >
+                          <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_191_13499)">
                               <path
                                 d="M19.999 10.2217C20.0111 9.53428 19.9387 8.84788 19.7834 8.17737H10.2031V11.8884H15.8266C15.7201 12.5391 15.4804 13.162 15.1219 13.7195C14.7634 14.2771 14.2935 14.7578 13.7405 15.1328L13.7209 15.2571L16.7502 17.5568L16.96 17.5774C18.8873 15.8329 19.9986 13.2661 19.9986 10.2217"
