--- a/frontend/src/signinAdmin.html
+++ b/frontend/src/signinAdmin.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign In | TailAdmin - Tailwind CSS Admin Dashboard Template</title>
-  <link rel="icon" href="favicon.ico"><link href="style.css" rel="stylesheet"></head>
+  </head>
 
   <body
     x-data="{ page: 'signin', 'loaded': true, 'darkMode': true, 'stickyMenu': false, 'sidebarToggle': false, 'scrollTop': false }"
@@ -15,16 +15,7 @@
     :class="{'dark text-bodydark bg-boxdark-2': darkMode === true}"
   >
     <!-- ===== Preloader Start ===== -->
-    <div
-  x-show="loaded"
-  x-init="window.addEventListener('DOMContentLoaded', () => {setTimeout(() => loaded = false, 500)})"
-  class="fixed left-0 top-0 z-999999 flex h-screen w-screen items-center justify-center bg-white dark:bg-black"
->
-  <div
-    class="h-16 w-16 animate-spin rounded-full border-4 border-solid border-primary border-t-transparent"
-  ></div>
-</div>
-
+    <include src="./partials/preloader.html"></include>
     <!-- ===== Preloader End ===== -->
 
     <!-- ===== Page Wrapper Start ===== -->
@@ -50,14 +41,6 @@
                 Sign In
               </h2>
 
-              <nav>
-                <ol class="flex items-center gap-2">
-                  <li>
-                    <a class="font-medium" href="signup.html">Sign Up /</a>
-                  </li>
-                  <li class="font-medium text-primary">Sign In</li>
-                </ol>
-              </nav>
             </div>
             <!-- Breadcrumb End -->
 
@@ -68,16 +51,10 @@
               <div class="flex flex-wrap items-center">
                 <div class="hidden w-full xl:block xl:w-1/2">
                   <div class="px-26 py-17.5 text-center">
-                    <h1 class="font-bold text-black text-2xl underline "> Sign In</h1>
-
-                    <p class="font-medium pt-3 2xl:px-20">
-                      Ingin konsul dengan pakar? <br>
-                      Sign Up <b>sekarang!</b> 
-                    </p>
-
+                    <h1 class="font-bold text-black text-2xl underline "> EXPERT ONLY</h1>
                     <span class="mt-15 inline-block">
                       <img
-                        src="src/images/illustration/illustration-03.svg"
+                        src="./images/illustration/illustration-03.svg"
                         alt="illustration"
                       />
                     </span>
@@ -103,7 +80,7 @@
                           <input
                             type="email"
                             placeholder="Enter your email"
-                            class="w-full rounded-lg border border-stroke bg-transparent py-4 pl-6 pr-10 outline-none focus:border-primary focus-visible:shadow-none dark:border-form-strokedark dark:bg-form-input dark:focus:border-primary"
+                            class="w-full rounded-lg border border-stroke bg-transparent py-4 pl-6 pr-10 outline-none focus:border-red-500 focus-visible:shadow-none dark:border-form-strokedark dark:bg-form-input dark:focus:border-primary"
                           />
 
                           <span class="absolute right-4 top-4">
@@ -135,7 +112,7 @@
                           <input
                             type="password"
                             placeholder="Enter your password"
-                            class="w-full rounded-lg border border-stroke bg-transparent py-4 pl-6 pr-10 outline-none focus:border-primary focus-visible:shadow-none dark:border-form-strokedark dark:bg-form-input dark:focus:border-primary"
+                            class="w-full rounded-lg border border-stroke bg-transparent py-4 pl-6 pr-10 outline-none focus:border-red-500 focus-visible:shadow-none dark:border-form-strokedark dark:bg-form-input dark:focus:border-primary"
                           />
 
                           <span class="absolute right-4 top-4">
@@ -166,7 +143,7 @@
                         <input
                           type="submit"
                           value="Sign In"
-                          class="w-full cursor-pointer rounded-lg border border-primary bg-primary p-4 font-medium text-white transition hover:bg-opacity-90"
+                          class="w-full cursor-pointer rounded-lg border border-red-300 bg-red-500 p-4 font-medium text-white transition hover:bg-opacity-90"
                         />
                       </div>
 
@@ -179,7 +156,7 @@
                       <div class="mt-6 text-center">
                         <p class="font-medium">
                           Don’t have any account?
-                          <a href="signup.html" class="text-primary">Sign Up</a>
+                          <a href="signupAdmin.html" class="text-red-500">Sign Up</a>
                         </p>
                       </div>
                     </form>
@@ -195,5 +172,5 @@
       <!-- ===== Content Area End ===== -->
     </div>
     <!-- ===== Page Wrapper End ===== -->
-  <script defer src="bundle.js"></script></body>
+  </body>
 </html>
