--- a/frontend/src/signupAdmin.html
+++ b/frontend/src/signupAdmin.html
@@ -4,42 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign In | TailAdmin - Tailwind CSS Admin Dashboard Template</title>
-  <link rel="icon" href="favicon.ico"><link href="style.css" rel="stylesheet"></head>
+    <title>Sign Up | TailAdmin - Tailwind CSS Admin Dashboard Template</title>
+  </head>
 
   <body
-    x-data="{ page: 'signin', 'loaded': true, 'darkMode': true, 'stickyMenu': false, 'sidebarToggle': false, 'scrollTop': false }"
+    x-data="{ page: 'signup', 'loaded': true, 'darkMode': true, 'stickyMenu': false, 'sidebarToggle': false, 'scrollTop': false }"
     x-init="
           darkMode = JSON.parse(localStorage.getItem('darkMode'));
           $watch('darkMode', value => localStorage.setItem('darkMode', JSON.stringify(value)))"
     :class="{'dark text-bodydark bg-boxdark-2': darkMode === true}"
   >
     <!-- ===== Preloader Start ===== -->
-    <div
-  x-show="loaded"
-  x-init="window.addEventListener('DOMContentLoaded', () => {setTimeout(() => loaded = false, 500)})"
-  class="fixed left-0 top-0 z-999999 flex h-screen w-screen items-center justify-center bg-white dark:bg-black"
->
-  <div
-    class="h-16 w-16 animate-spin rounded-full border-4 border-solid border-primary border-t-transparent"
-  ></div>
-</div>
-
+    <include src="./partials/preloader.html"></include>
     <!-- ===== Preloader End ===== -->
 
     <!-- ===== Page Wrapper Start ===== -->
     <div class="flex h-screen overflow-hidden">
-      <!-- ===== Sidebar Start ===== -->
-      <!-- ===== Sidebar End ===== -->
-
-      <!-- ===== Content Area Start ===== -->
       <div
         class="relative flex flex-1 flex-col overflow-y-auto overflow-x-hidden"
       >
-        <!-- ===== Header Start ===== -->
-        <!-- ===== Header End ===== -->
-
-        <!-- ===== Main Content Start ===== -->
         <main>
           <div class="mx-auto max-w-screen-2xl p-4 md:p-6 2xl:p-10">
             <!-- Breadcrumb Start -->
@@ -47,17 +30,8 @@
               class="mb-6 flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between"
             >
               <h2 class="text-title-md2 font-bold text-black dark:text-white">
-                Sign In
+                Sign Up
               </h2>
-
-              <nav>
-                <ol class="flex items-center gap-2">
-                  <li>
-                    <a class="font-medium" href="signup.html">Sign Up /</a>
-                  </li>
-                  <li class="font-medium text-primary">Sign In</li>
-                </ol>
-              </nav>
             </div>
             <!-- Breadcrumb End -->
 
@@ -68,7 +42,8 @@
               <div class="flex flex-wrap items-center">
                 <div class="hidden w-full xl:block xl:w-1/2">
                   <div class="px-26 py-17.5 text-center">
-                    <h1 class="font-bold text-black text-2xl underline "> Sign In</h1>
+                    
+                    <h1 class="font-bold text-black text-2xl underline "> Sign Up</h1>
 
                     <p class="font-medium pt-3 2xl:px-20">
                       Ingin konsul dengan pakar? <br>
@@ -77,7 +52,7 @@
 
                     <span class="mt-15 inline-block">
                       <img
-                        src="src/images/illustration/illustration-03.svg"
+                        src="./images/illustration/illustration-03.svg"
                         alt="illustration"
                       />
                     </span>
@@ -90,10 +65,46 @@
                     <h2
                       class="mb-9 text-2xl font-bold text-black dark:text-white sm:text-title-xl2"
                     >
-                      Sign In to Expert System
+                      Sign Up to Expert System
                     </h2>
 
                     <form>
+                      <div class="mb-4">
+                        <label
+                          class="mb-2.5 block font-medium text-black dark:text-white"
+                          >Name</label
+                        >
+                        <div class="relative">
+                          <input
+                            type="text"
+                            placeholder="Enter your full name"
+                            class="w-full rounded-lg border border-stroke bg-transparent py-4 pl-6 pr-10 outline-none focus:border-primary focus-visible:shadow-none dark:border-form-strokedark dark:bg-form-input dark:focus:border-primary"
+                          />
+
+                          <span class="absolute right-4 top-4">
+                            <svg
+                              class="fill-current"
+                              width="22"
+                              height="22"
+                              viewBox="0 0 22 22"
+                              fill="none"
+                              xmlns="http://www.w3.org/2000/svg"
+                            >
+                              <g opacity="0.5">
+                                <path
+                                  d="M11.0008 9.52185C13.5445 9.52185 15.607 7.5281 15.607 5.0531C15.607 2.5781 13.5445 0.584351 11.0008 0.584351C8.45703 0.584351 6.39453 2.5781 6.39453 5.0531C6.39453 7.5281 8.45703 9.52185 11.0008 9.52185ZM11.0008 2.1656C12.6852 2.1656 14.0602 3.47185 14.0602 5.08748C14.0602 6.7031 12.6852 8.00935 11.0008 8.00935C9.31641 8.00935 7.94141 6.7031 7.94141 5.08748C7.94141 3.47185 9.31641 2.1656 11.0008 2.1656Z"
+                                  fill=""
+                                />
+                                <path
+                                  d="M13.2352 11.0687H8.76641C5.08828 11.0687 2.09766 14.0937 2.09766 17.7719V20.625C2.09766 21.0375 2.44141 21.4156 2.88828 21.4156C3.33516 21.4156 3.67891 21.0719 3.67891 20.625V17.7719C3.67891 14.9531 5.98203 12.6156 8.83516 12.6156H13.2695C16.0883 12.6156 18.4258 14.9187 18.4258 17.7719V20.625C18.4258 21.0375 18.7695 21.4156 19.2164 21.4156C19.6633 21.4156 20.007 21.0719 20.007 20.625V17.7719C19.9039 14.0937 16.9133 11.0687 13.2352 11.0687Z"
+                                  fill=""
+                                />
+                              </g>
+                            </svg>
+                          </span>
+                        </div>
+                      </div>
+
                       <div class="mb-4">
                         <label
                           class="mb-2.5 block font-medium text-black dark:text-white"
@@ -126,7 +137,7 @@
                         </div>
                       </div>
 
-                      <div class="mb-6">
+                      <div class="mb-4">
                         <label
                           class="mb-2.5 block font-medium text-black dark:text-white"
                           >Password</label
@@ -165,21 +176,23 @@
                       <div class="mb-5">
                         <input
                           type="submit"
-                          value="Sign In"
-                          class="w-full cursor-pointer rounded-lg border border-primary bg-primary p-4 font-medium text-white transition hover:bg-opacity-90"
+                          value="Create account"
+                          class="w-full cursor-pointer rounded-lg border border-red-500 bg-red-500 p-4 font-medium text-white transition hover:bg-opacity-90"
                         />
                       </div>
 
                       <button
-                        class="flex w-full items-center justify-center gap-3.5 rounded-lg border border-stroke bg-gray p-4 font-medium hover:bg-opacity-70 dark:border-strokedark dark:bg-meta-4 dark:hover:bg-opacity-70"
+                        class="flex w-full items-center justify-center gap-3.5 rounded-lg border border-stroke bg-gray p-4 font-medium hover:bg-opacity-80 dark:border-strokedark dark:bg-meta-4 dark:hover:bg-opacity-80"
                       >
-                        Sign in Admin
+                        <span>
+                        </span>
+                        Sign up Admin
                       </button>
 
                       <div class="mt-6 text-center">
                         <p class="font-medium">
-                          Don’t have any account?
-                          <a href="signup.html" class="text-primary">Sign Up</a>
+                          Already have an account?
+                          <a href="signinAdmin.html" class="text-red-500">Sign in</a>
                         </p>
                       </div>
                     </form>
@@ -195,5 +208,5 @@
       <!-- ===== Content Area End ===== -->
     </div>
     <!-- ===== Page Wrapper End ===== -->
-  <script defer src="bundle.js"></script></body>
+  </body>
 </html>
