--- a/frontend/src/signinAdmin.html
+++ b/frontend/src/signinAdmin.html
@@ -70,14 +70,14 @@
                       Sign In to Expert System
                     </h2>
 
-                    <form>
+                    <form id="signInAdmin">
                       <div class="mb-4">
                         <label
                           class="mb-2.5 block font-medium text-black dark:text-white"
                           >Email</label
                         >
                         <div class="relative">
-                          <input
+                          <input id="email"
                             type="email"
                             placeholder="Enter your email"
                             class="w-full rounded-lg border border-stroke bg-transparent py-4 pl-6 pr-10 outline-none focus:border-red-500 focus-visible:shadow-none dark:border-form-strokedark dark:bg-form-input dark:focus:border-primary"
@@ -109,7 +109,7 @@
                           >Password</label
                         >
                         <div class="relative">
-                          <input
+                          <input id="password"
                             type="password"
                             placeholder="Enter your password"
                             class="w-full rounded-lg border border-stroke bg-transparent py-4 pl-6 pr-10 outline-none focus:border-red-500 focus-visible:shadow-none dark:border-form-strokedark dark:bg-form-input dark:focus:border-primary"
@@ -171,6 +171,7 @@
       </div>
       <!-- ===== Content Area End ===== -->
     </div>
+    <script src="./login/signinAdmin.js"></script>
     <!-- ===== Page Wrapper End ===== -->
   </body>
 </html>
