"implementasi forward chaining (unfinished)"

--- a/frontend/konsul.html
+++ b/frontend/konsul.html
@@ -114,31 +114,83 @@
         <h1 class="modal-title fs-5" id="exampleModalLabel">Konsul</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
-        <div class="form-check">
-        <label for=""></label>
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-        <label class="form-check-label" for="flexCheckDefault">
-            Default checkbox
-        </label>
-        </div>
-        <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-        <label class="form-check-label" for="flexCheckChecked">
-            Checked checkbox
-        </label>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+      <form action="" id="konsul">
+          <label class="form-check-label" for="flexCheckDefault" >
+              Apakah anda memiliki pasangan yang ringan tangan?
+          <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah anda memiliki pasangan yang emosional atau temperamental?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah pasangan anda sering dalam pengaruh alkohol atau obat-obatan terlarang?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah pasangan anda memiliki latar belakang keluarga yang bermasalah?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah anda mengalami pelecehan secara verbal atau emosional?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah pasangan anda menunjukan kecemburuan yang berlebihan?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah anda atau pasangan anda memiliki trauma masa lalu?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah pasangan anda terlalu mengendalikan dan mendominasi dalam hubungan anda?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah pasangan anda terlalu mengendalikan aktivitas seksual anda?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah anda atau pasangan anda memiliki trauma seksual masa lalu?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah pasangan anda tidak puas secara seksual dengan anda?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah anda merasa bahwa ada ketidaksetaraan gender dalam hubungan rumah tangga anda?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah pasangan anda sering menghindari tanggung jawab dalam hubungan rumah tangga anda?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah anda merasa bahwa ada ketidaksetaraan gender dalam hubungan rumah tangga anda?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah pasangan anda tidak mampu secara finansial?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <label class="form-check-label" for="flexCheckDefault">
+              Apakah pasangan anda menunjukan sikap acuh tak acuh dalam hubungan rumah tangga anda?
+        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          </label>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
     </div>
   </div>
 </div>
 <!-- end of modal -->
 
-<script src="jenisKdrt.js"></script>
+
+<script src="konsul.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
