--- a/frontend/konsul.html
+++ b/frontend/konsul.html
@@ -82,7 +82,7 @@
       <div id="layoutSidenav_content">
         <main>
           <div class="container-fluid px-4">
-            <h1 class="mt-4">Hasil Konsul</h1>
+            <h1 class="mt-4">Konsul</h1>
             <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Konsul Sekarang
             </button>
@@ -92,21 +92,36 @@
               <tr>
                 <th scope="col">No</th>
                 <th scope="col">Tanggal</th>
-                <th scope="col">Ciri-ciri KDRT</th>
-                <th scope="col">Jenis KDRT</th>
-                <th scope="col">Pasal</th>
-                <th scope="col">Prosedur</th>
                 <th scope="col">Action</th>
               </tr>
             </thead>
-            <tbody id="konsul">
+            <tbody id="hasilKonsul">
             </tbody>
             </div>
         </main>
     </div>
 </div>
 
-<!-- modal -->
+<!-- Modal detail konsul -->
+<div class="modal fade" id="detailKonsul" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Detail Konsul</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- modal konsul -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -114,74 +129,70 @@
         <h1 class="modal-title fs-5" id="exampleModalLabel">Konsul</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <form action="" id="konsul">
+      <form id="konsul">
           <label class="form-check-label" for="flexCheckDefault" >
               Apakah anda memiliki pasangan yang ringan tangan?
-          <input class="form-check-input" type="checkbox" value="" class="jawaban">
+          <input class="form-check-input" type="checkbox" value="" name="1" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah anda memiliki pasangan yang emosional atau temperamental?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="2" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah pasangan anda sering dalam pengaruh alkohol atau obat-obatan terlarang?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="3" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah pasangan anda memiliki latar belakang keluarga yang bermasalah?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="4" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah anda mengalami pelecehan secara verbal atau emosional?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="5" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah pasangan anda menunjukan kecemburuan yang berlebihan?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="6" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah anda atau pasangan anda memiliki trauma masa lalu?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="7" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah pasangan anda terlalu mengendalikan dan mendominasi dalam hubungan anda?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="8" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah pasangan anda terlalu mengendalikan aktivitas seksual anda?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="9" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah anda atau pasangan anda memiliki trauma seksual masa lalu?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="10" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah pasangan anda tidak puas secara seksual dengan anda?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="11" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah anda merasa bahwa ada ketidaksetaraan gender dalam hubungan rumah tangga anda?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="12" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah pasangan anda sering menghindari tanggung jawab dalam hubungan rumah tangga anda?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
-          </label>
-          <label class="form-check-label" for="flexCheckDefault">
-              Apakah anda merasa bahwa ada ketidaksetaraan gender dalam hubungan rumah tangga anda?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="13" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah pasangan anda tidak mampu secara finansial?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="14" class="jawaban">
           </label>
           <label class="form-check-label" for="flexCheckDefault">
               Apakah pasangan anda menunjukan sikap acuh tak acuh dalam hubungan rumah tangga anda?
-        <input class="form-check-input" type="checkbox" value="" class="jawaban">
+        <input class="form-check-input" type="checkbox" value="" name="15" class="jawaban">
           </label>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </form>
     </div>
@@ -193,9 +204,9 @@
 <script src="konsul.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-    <script src="assets/demo/chart-area-demo.js"></script>
-    <script src="assets/demo/chart-bar-demo.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script> -->
+    <!-- <script src="assets/demo/chart-area-demo.js"></script>
+    <script src="assets/demo/chart-bar-demo.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
     <script src="js/datatables-simple-demo.js"></script>
   </body>
