forward chaining is done

--- a/frontend/konsul.html
+++ b/frontend/konsul.html
@@ -73,10 +73,6 @@
               </div>
             </div>
           </div>
-          <div class="sb-sidenav-footer">
-            <div class="small">Logged in as:</div>
-            Start Bootstrap
-          </div>
         </nav>
       </div>
       <div id="layoutSidenav_content">
@@ -104,7 +100,7 @@
 
 <!-- Modal detail konsul -->
 <div class="modal fade" id="detailKonsul" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-xl" style="width: 100%;">
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">Detail Konsul</h1>
@@ -123,78 +119,95 @@
 
 <!-- modal konsul -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">Konsul</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <form id="konsul">
-          <label class="form-check-label" for="flexCheckDefault" >
+      <div style="margin-left: 10px;">
+        <form id="konsul">
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;" >
               Apakah anda memiliki pasangan yang ringan tangan?
           <input class="form-check-input" type="checkbox" value="" name="1" class="jawaban">
+          <span><b>Ya</b></span>
           </label>
-          <label class="form-check-label" for="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
               Apakah anda memiliki pasangan yang emosional atau temperamental?
         <input class="form-check-input" type="checkbox" value="" name="2" class="jawaban">
+        <span><b>Ya</b></span>
           </label>
-          <label class="form-check-label" for="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
               Apakah pasangan anda sering dalam pengaruh alkohol atau obat-obatan terlarang?
         <input class="form-check-input" type="checkbox" value="" name="3" class="jawaban">
+        <span><b>Ya</b></span>
           </label>
-          <label class="form-check-label" for="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
               Apakah pasangan anda memiliki latar belakang keluarga yang bermasalah?
         <input class="form-check-input" type="checkbox" value="" name="4" class="jawaban">
+        <span><b>Ya</b></span>
           </label>
-          <label class="form-check-label" for="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
               Apakah anda mengalami pelecehan secara verbal atau emosional?
         <input class="form-check-input" type="checkbox" value="" name="5" class="jawaban">
+        <span><b>Ya</b></span>
           </label>
-          <label class="form-check-label" for="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
               Apakah pasangan anda menunjukan kecemburuan yang berlebihan?
         <input class="form-check-input" type="checkbox" value="" name="6" class="jawaban">
+        <span><b>Ya</b></span>
           </label>
-          <label class="form-check-label" for="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
               Apakah anda atau pasangan anda memiliki trauma masa lalu?
         <input class="form-check-input" type="checkbox" value="" name="7" class="jawaban">
+        <span><b>Ya</b></span>
           </label>
-          <label class="form-check-label" for="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
               Apakah pasangan anda terlalu mengendalikan dan mendominasi dalam hubungan anda?
         <input class="form-check-input" type="checkbox" value="" name="8" class="jawaban">
+        <span><b>Ya</b></span>
           </label>
-          <label class="form-check-label" for="flexCheckDefault">
-              Apakah pasangan anda terlalu mengendalikan aktivitas seksual anda?
-        <input class="form-check-input" type="checkbox" value="" name="9" class="jawaban">
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
+            Apakah pasangan anda terlalu mengendalikan aktivitas seksual anda?
+            <input class="form-check-input" type="checkbox" value="" name="9" class="jawaban">
+            <span><b>Ya</b></span>
           </label>
-          <label class="form-check-label" for="flexCheckDefault">
-              Apakah anda atau pasangan anda memiliki trauma seksual masa lalu?
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
+            Apakah anda atau pasangan anda memiliki trauma seksual masa lalu?
         <input class="form-check-input" type="checkbox" value="" name="10" class="jawaban">
+        <span><b>Ya</b></span>
           </label>
-          <label class="form-check-label" for="flexCheckDefault">
-              Apakah pasangan anda tidak puas secara seksual dengan anda?
-        <input class="form-check-input" type="checkbox" value="" name="11" class="jawaban">
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
+            Apakah pasangan anda tidak puas secara seksual dengan anda?
+            <input class="form-check-input" type="checkbox" value="" name="11" class="jawaban">
+        <span><b>Ya</b></span>
           </label>
-          <label class="form-check-label" for="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
               Apakah anda merasa bahwa ada ketidaksetaraan gender dalam hubungan rumah tangga anda?
         <input class="form-check-input" type="checkbox" value="" name="12" class="jawaban">
-          </label>
-          <label class="form-check-label" for="flexCheckDefault">
+        <span><b>Ya</b></span>
+      </label>
+      <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
               Apakah pasangan anda sering menghindari tanggung jawab dalam hubungan rumah tangga anda?
         <input class="form-check-input" type="checkbox" value="" name="13" class="jawaban">
-          </label>
-          <label class="form-check-label" for="flexCheckDefault">
+        <span><b>Ya</b></span>
+      </label>
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
               Apakah pasangan anda tidak mampu secara finansial?
-        <input class="form-check-input" type="checkbox" value="" name="14" class="jawaban">
-          </label>
-          <label class="form-check-label" for="flexCheckDefault">
+              <input class="form-check-input" type="checkbox" value="" name="14" class="jawaban">
+              <span><b>Ya</b></span>
+            </label>
+          <label class="form-check-label" for="flexCheckDefault" style="margin-bottom: 10px;">
               Apakah pasangan anda menunjukan sikap acuh tak acuh dalam hubungan rumah tangga anda?
         <input class="form-check-input" type="checkbox" value="" name="15" class="jawaban">
+        <span><b>Ya</b></span>
           </label>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </form>
+      </div>
     </div>
   </div>
 </div>
