--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,6 +97,23 @@
         </footer>
       </div>
     </div>
+    <script>
+
+const check = async () => {
+  console.log("test")
+  const data = await fetch("http://localhost:3000/verify", {
+    method: "GET",
+    credentials: "include",
+    headers: {
+      "Content-Type": "application/json",
+    },
+  });
+  const json = await data.json();
+  console.log(json);
+}
+
+check()
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
