--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
       <!-- Navbar Brand-->
-      <a class="navbar-brand ps-3" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand ps-3" href="index.html">Expert System</a>
       <!-- Sidebar Toggle-->
       <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
       <!-- Navbar Search-->
@@ -75,7 +75,6 @@
           </div>
           <div class="sb-sidenav-footer">
             <div class="small">Logged in as:</div>
-            Start Bootstrap
           </div>
         </nav>
       </div>
@@ -88,6 +87,22 @@
             </ol>
           </div>
         </main>
+        <div style="margin-left: 3rem; margin-right: 3rem">
+          <h1 style="text-align: center">Apa itu Sistem Pakar?</h1>
+          <p style="text-align: justify">
+            Sistem pakar (expert system) adalah sistem yang berusaha mengapdosi pengetahuan manusia ke komputer, agar komputer dapat menyelesaikan masalah seperti yang biasa dilakukan oleh para ahli. Sistem pakar yang baik dirancang agar
+            dapat menyelesaikan suatu permasalahan tertentu dengan meniru kerja dari para ahli.
+          </p>
+          <h1 style="text-align: center; margin-top: 5rem">Apa itu Sistem Pakar?</h1>
+          <p style="text-align: justify">
+            Sistem pakar (expert system) adalah sistem yang berusaha mengapdosi pengetahuan manusia ke komputer, agar komputer dapat menyelesaikan masalah seperti yang biasa dilakukan oleh para ahli. Sistem pakar yang baik dirancang agar
+            dapat menyelesaikan suatu permasalahan tertentu dengan meniru kerja dari para ahli.
+          </p>
+          <h1 style="text-align: center; margin-top: 5rem">Penjelasan website ini</h1>
+          <p style="text-align: justify">
+            Website ini merupakan tugas akhir dan syarat untuk meraih gelar Sarjana Komputer. Dibuat oleh seorang Backend Developer Rio Thung. Menggunakan tech stack: Frontend: Bootstrap, Backend: Node JS, Database: Mysql, ORM: Prisma.
+          </p>
+        </div>
         <footer class="py-4 bg-light mt-auto">
           <div class="container-fluid px-4">
             <div class="d-flex align-items-center justify-content-between small">
@@ -97,23 +112,6 @@
         </footer>
       </div>
     </div>
-    <script>
-
-const check = async () => {
-  console.log("test")
-  const data = await fetch("http://localhost:3000/verify", {
-    method: "GET",
-    credentials: "include",
-    headers: {
-      "Content-Type": "application/json",
-    },
-  });
-  const json = await data.json();
-  console.log(json);
-}
-
-check()
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
