--- a/frontend/jenisKdrt.html
+++ b/frontend/jenisKdrt.html
@@ -14,7 +14,7 @@
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
       <!-- Navbar Brand-->
-      <a class="navbar-brand ps-3" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand ps-3" href="index.html">Expert System</a>
       <!-- Sidebar Toggle-->
       <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
       <!-- Navbar Search-->
@@ -75,7 +75,6 @@
           </div>
           <div class="sb-sidenav-footer">
             <div class="small">Logged in as:</div>
-            Start Bootstrap
           </div>
         </nav>
       </div>
@@ -85,6 +84,9 @@
             <h1 class="mt-4">Jenis-jenis KDRT</h1>
             <div class="card-body">
             <table class="table">
+              <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#tambahJenis">
+            Tambah Data
+            </button>
             <thead>
               <tr>
                 <th scope="col">No</th>
@@ -98,12 +100,65 @@
         </main>
     </div>
 </div>
+
+<!-- Modal Tambah Jenis KDRT -->
+<div class="modal fade" id="tambahJenis" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Tambah Data Jenis KDRT</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div style="margin-left: 10px; margin-right: 10px;">
+        <form id="jenis">
+          <div class="mb-3">
+          <label class="form-label">Jenis KDRT</label>
+          <input type="text" id="dataJenis" class="form-control" >
+      </div>
+      <div>
+              <label for="saran" class="form-label">Saran</label>
+              <select name="saran" class="form-control" id="idSaran" class="addOption"> 
+                  <option value="">Pilih Saran</option> <!-- Option baru -->
+              </select>
+          </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end of modal -->
+
+
+<!-- Modal edit jenis KDRT -->
+<div class="modal fade" id="editJenis" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Data Jenis KDRT</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" id="updateJenis">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end of modal -->
+
 <script src="jenisKdrt.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
     <script src="assets/demo/chart-area-demo.js"></script>
-    <script src="assets/demo/chart-bar-demo.js"></script>
+    <script src="assets/demo/chart-bar-demo.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
     <script src="js/datatables-simple-demo.js"></script>
   </body>
