--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Login - SB Admin</title>
+    <title>Expert System</title>
     <link href="css/styles.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
   </head>
@@ -31,7 +31,7 @@
                       </div>
                       <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                         <a class="small" href=""></a>
-                        <a class="btn btn-primary">Login</a>
+                        <button class="btn btn-primary" type="submit">Login</button>
                       </div>
                     </form>
                   </div>
@@ -59,7 +59,7 @@
         </footer>
       </div>
     </div>
-    <script src="./auth/authUser.js"></script>
+    <script src="./auth/auth.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
   </body>
