--- a/frontend/pasal.html
+++ b/frontend/pasal.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Dashboard - SB Admin</title>
+    <title>Expert System</title>
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -91,7 +91,7 @@
                 <th scope="col">Pasal</th>
                 <th scope="col">Ayat</th>
                 <th scope="col">Isi</th>
-                <th scope="col">Action</th>
+                <!-- <th scope="col">Action</th> -->
               </tr>
             </thead>
             <tbody id="pasal">
